Finished arr seq remove if junits